tests/errors/error_display/test_copy_non_copy_display.sim

        extern fn take(r: &out i64);
        fn f(r: &out i64) {
            entry:
            call take(copy r);
            return
        }
    